--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,13 @@ html,
 body {
   padding: 0;
   margin: 0;
-  background-color: #fff1f2;
+  background: rgb(254, 230, 233);
+  background: linear-gradient(
+    329deg,
+    rgba(254, 230, 233, 1) 6%,
+    rgba(255, 241, 242, 1) 27%,
+    rgba(254, 230, 233, 1) 91%
+  );
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
