--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,11 +8,12 @@ body {
   margin: 0;
   background: rgb(254, 230, 233);
   background: linear-gradient(
-    329deg,
-    rgba(254, 230, 233, 1) 6%,
-    rgba(255, 241, 242, 1) 27%,
-    rgba(254, 230, 233, 1) 91%
+    300deg,
+    rgba(254, 230, 233, 1) 0%,
+    rgba(255, 241, 242, 1) 40%,
+    rgb(255, 225, 229) 100%
   );
+  background-color: rgb(254, 231, 233);
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
